# golden-bandra

./: .gitignore  CNAME  EIBackground.htm  IndexGB.htm  Oratory Schedule.htm  README.md  TODO.md  Test  XavierHouse.htm  build  golden-bandra-com.cabal  index.html  index.md  page-list  pandoc-filter  ranwar.html  rediscovering-the-roots.html  site.hs  stack.yaml  styles.css
CeleBandra/: CeleBandra.htm
andrews/: ArRegPak.htm  indexStAndrew.htm
archive/: Aug3104.css  EIEssay.htm  EIindex.htm  RanwarCB.htm
denis-drafts/: bandra-and-the-marathas.html  bandras-heritage-villages.html  portuguese-period.html
dlp-letter/: index.html
drafts/: bandra-and-the-marathas.html  bandras-heritage-villages.html  portuguese-period.html
gb/: ranwar.html  rediscovering-the-roots.html
golden-bandra/: ranwar.html  rediscovering-the-roots.html
misc-maps/: misc-maps.html
period/: 1534-1739-portuguese-possession.html  1725-1750-transition-to-british.html  1739-1775-maratha-raj.html
periods/: 1509-1534-gujerat.html  1509-1534-gujerat.md  1534-1739-portuguese-possession.html  1534-1739-portuguese-possession.md  1725-1750-transition-to-british.html  1725-1750-transition-to-british.md  1739-1775-maratha-raj.html  1739-1775-maratha-raj.md  1775-1947-british.html  1918-1921-town-planning-schemes.html  1918-1921-town-planning-schemes.md  8888-9999-coopertive-schemes.html  8888-9999-coopertive-schemes.md  british.html  british.md  gujerat.html  (+6 more)
www/: Test  golden-bandra-com.cabal  site.hs  styles.css
www/templates/: frontpage.html  item.html  item.listing.html  main.html  period.html
(+346 files in other folders)
