name:               golden-bandra-com
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable builder
  main-is:          site.hs
  build-depends:    base == 4.*
                  , filepath
                  , hakyll == 4.16.*
                  , hakyll-images
                  , pandoc
                  , pandoc-sidenote

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
